force-app/main/default/objects/NBA_Cadence_Rule__mdt/NBA_Cadence_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Defines outreach cadence timing per scenario. Controls attempt spacing, daily caps, and method escalation for NBA V2 engine.</description>
    <label>NBA Cadence Rule</label>
    <pluralLabel>NBA Cadence Rules</pluralLabel>
</CustomObject>