force-app/main/default/objects/NBA_Cadence_Rule__mdt/fields/Attempt_Spacing_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Spacing_Minutes__c</fullName>
    <description>Minimum minutes between attempts at this cadence stage</description>
    <label>Attempt Spacing (Minutes)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>