force-app/main/default/objects/NBA_Cadence_Rule__mdt/fields/Cadence_Day__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Day__c</fullName>
    <description>Which day in the cadence sequence (0, 1, 3, 5)</description>
    <label>Cadence Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>