force-app/main/default/objects/NBA_Cadence_Rule__mdt/fields/Cadence_Stage__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Stage__c</fullName>
    <description>Position in the outreach cadence sequence (1, 2, 3...)</description>
    <label>Cadence Stage</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>