force-app/main/default/objects/NBA_Cadence_Rule__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Human-readable description of what this rule does</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>