force-app/main/default/objects/NBA_Cadence_Rule__mdt/fields/Hint_Text__c.field-meta.xml
<CustomField>
    <fullName>Hint_Text__c</fullName>
    <description>Method hint shown to AE for non-call steps (e.g., Send SMS if no connect)</description>
    <label>Hint Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>