force-app/main/default/objects/NBA_Cadence_Rule__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this rule is active. Inactive rules are ignored by the engine.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>