force-app/main/default/objects/NBA_Cadence_Rule__mdt/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True = call action step, false = hint-only step (SMS/Email)</description>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>