force-app/main/default/objects/NBA_Cadence_Rule__mdt/fields/Max_Attempts_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Max_Attempts_Per_Day__c</fullName>
    <description>Maximum number of attempts allowed per day at this cadence stage</description>
    <label>Max Attempts Per Day</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>