force-app/main/default/objects/NBA_Cadence_Rule__mdt/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Primary outreach method for this cadence stage (Call, SMS, Email)</description>
    <label>Method</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>