force-app/main/default/objects/NBA_Cadence_Rule__mdt/fields/Next_Method_On_Fail__c.field-meta.xml
<CustomField>
    <fullName>Next_Method_On_Fail__c</fullName>
    <description>Fallback method if primary method fails (e.g., Call fails → SMS)</description>
    <label>Next Method On Fail</label>
    <length>50</length>
    <type>Text</type>
</CustomField>