force-app/main/default/objects/NBA_Cadence_Rule__mdt/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <description>Which business scenario this cadence applies to (e.g., First Touch, Re-engage, Stage Progression)</description>
    <label>Scenario</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>