force-app/main/default/objects/NBA_Cadence_Rule__mdt/fields/Step_Order__c.field-meta.xml
<CustomField>
    <fullName>Step_Order__c</fullName>
    <description>Ordering within the same cadence day (1, 2, 3...)</description>
    <label>Step Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>