force-app/main/default/objects/NBA_Cadence_Rule__mdt/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <description>A/B variant identifier for the cadence (e.g., A, B)</description>
    <label>Variant</label>
    <length>30</length>
    <type>Text</type>
</CustomField>